small modification on WEIN and BEON (changed to WEN and BE0N)

--- a/platform/logibone/logibone_master_RA1.ucf
+++ b/platform/logibone/logibone_master_RA1.ucf
@@ -29,9 +29,9 @@ NET "GPMC_CSN1"          LOC = "P102"| IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = S
 NET "GPMC_CSN0"          LOC = "P97"| IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ;   # 
 NET "GPMC_ADVN"          LOC = "P121"| IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ;   #
 NET "GPMC_OEN"           LOC = "P120"| IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ;   #  
-NET "GPMC_BEON"          LOC = "P119"| IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ;   # 
+NET "GPMC_BE0N"          LOC = "P119"| IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ;   # 
 NET "GPMC_BE1N"          LOC = "P46"| IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ;   # 
-NET "GPMC_WEIN"          LOC = "P118"| IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ;  # 
+NET "GPMC_WEN"          LOC = "P118"| IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ;  # 
 #GPMC A/D
 NET "GPMC_AD0"           LOC = "P98"| IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ;   # 
 NET "GPMC_AD1"           LOC = "P99"| IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW  ;   # 
