canny added to demos

--- a/platform/logibone/logibone_sobel/logibone_sobel.ucf
+++ b/platform/logibone/logibone_sobel/logibone_sobel.ucf
@@ -10,7 +10,7 @@
 
 ##### Grouping Constraints #####
 NET "OSC_FPGA" TNM_NET = clk50_grp;
-PIN "sys_clocks_gen/clkout2_buf.O" CLOCK_DEDICATED_ROUTE = FALSE;
+#PIN "sys_clocks_gen/clkout2_buf.O" CLOCK_DEDICATED_ROUTE = FALSE;
 ##### Clock Period Constraints #####
 TIMESPEC TS_PER_CLK50 = PERIOD "clk50_grp" 20.0 ns;
 
