edma fifo module to get fast communication speeds

--- a/sw/beaglebone/papilio_module/Makefile
+++ b/sw/beaglebone/papilio_module/Makefile
@@ -1,7 +1,9 @@
 # If KERNELRELEASE is defined, we've been invoked from the
 # kernel build system and can use its language.
 ifneq ($(KERNELRELEASE),)
-	obj-m := papilio_fifo.o
+	obj-m := logibone_fifo.o
+	obj-m += logibone_edma_fifo.o
+	obj-m += edma_test.o
 # Otherwise we were called directly from the command
 # line; invoke the kernel build system.
 else
