working on getting interrupts between FPGA and beaglebone to work

--- a/platform/logibone/logibone_camera/logibone_camera.ucf
+++ b/platform/logibone/logibone_camera/logibone_camera.ucf
@@ -91,4 +91,7 @@ NET "PMOD2<7>"	LOC = "P78"| IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ;
 #NET "SATA_D2_P"	LOC = "P41";
 #NET "SATA_D2_N"	LOC = "P40";
 
+NET "MODE<0>" LOC = "P69" | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ;
+NET "MODE<1>" LOC = "P60" | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ;
+NET "INIT" LOC = "P39" | IOSTANDARD = LVTTL | DRIVE = 2 | SLEW = SLOW ;
 #RAM - "RAM21" IS NOT ROUTED!!  = ADR15 (SRAM) = DQ13 (SDRAM)
