improving plugin to get rid of kernel module

--- a/sw/beaglebone/logi-family/sw/mjpg-streamer-plugin/input_memory/Makefile
+++ b/sw/beaglebone/logi-family/sw/mjpg-streamer-plugin/input_memory/Makefile
@@ -20,6 +20,6 @@ all: input_memory.so
 clean:
 	rm -f *.a *.o core *~ *.so *.lo
 
-input_memory.so: $(OTHER_HEADERS) input_memory.c jpeg_func.c
-	$(CC) $(CFLAGS) -o $@ input_memory.c jpeg_func.c
+input_memory.so: $(OTHER_HEADERS) input_memory.c jpeg_func.c fifolib.c
+	$(CC) $(CFLAGS) -o $@ input_memory.c jpeg_func.c fifolib.c
 
